# Malenia-BossFight

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  makefile
DebugUtils/: DebugUtils.cpp  DebugUtils.hpp
Game/: Game.cpp  Game.h
Game/Camera/: Camera.cpp  Camera.h
Game/World/: Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  Physics.cpp  Physics.hpp  Position.cpp  Position.hpp  World.cpp  World.hpp
Graphics/: DirectX.cpp  DirectX.h  IGraphics.cpp  IGraphics.h  IRender.cpp  IResources.cpp
Input/: IInput.cpp  Input.cpp  Input.h
Math2/: Math2.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
Shaders/: PixelShader.hlsl  VertexShader.hlsl
System/: GameLauncher.cpp  GameLauncher.h  Usage.cpp  Usage.h
Windows_OS/: Windows_OS.cpp  Windows_OS.h
docs/: Malenia_BossFight.md  build.md  release.md
docs/Engine/: Engine.md  Graphics.md  Graphics_Helper.md  SDL_SubSystem.md  input.md  window.md
docs/Game/: Game.md
docs/Game_Lib/: Game.md  Game_Lib.md  Player.md
docs/Math_Lib/: Math_Lib.md  Rect.md  Vertex.md
docs/assets/: Assets_Helper.md  File_Format.md  Mesh.md  assets.md  assets_file_format.md  assets_shared.md  assets_tools.md  glTF_helper.md
docs/core/: core.md  debug_helper.md  file_system.md  n_dir.md  n_time.md  n_vector.md
src/: main.cpp
src/Engine/: CMakeLists.txt
src/Engine/Graphics/: Graphics.cpp  Graphics.h  Graphics_Helper.cpp  Graphics_Helper.h
src/Engine/SDL_SubSystem/: SDL_SubSystem.h  SDL_SubSytem.h
src/Engine/input/: input.cpp  input.h
src/Engine/window/: window.cpp  window.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h
src/Math_Lib/: CMakeLists.txt  Rect.h  Vertex.cpp  Vertex.h
src/assets/assets_src/: Sphere.glb
src/assets/shared/: Assets_Helper.cpp  Assets_Helper.h  CMakeLists.txt  Mesh.cpp  Mesh.h
src/assets/tools/: CMakeLists.txt  File_Format.cpp  File_Format.h  glTF_Helper.cpp  glTF_helper.h  main.cpp
src/core/: CMakeLists.txt  core.h  debug_helper.cpp  debug_helper.h  file_system.cpp  file_system.h  n_dir.cpp  n_dir.h  n_time.cpp  n_time.h  n_vector.h
src/testFile/: CMakeLists.txt  testFile.cpp  testFile.hpp
third-party-assets/: portfile.cmake  vcpkg.json
